Game integrated into web app

--- a/WebAppTecTreasure/wwwroot/index.html
+++ b/WebAppTecTreasure/wwwroot/index.html
@@ -1,31 +1,29 @@
-﻿@page
-@model WebAppTecTreasure.Pages.VideojuegoModel
-@{
-    ViewData["Title"] = "TecTreasure";
-    Layout = "_LayoutPaginaSorteosTec";
-}
-
-<head>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-</head>
-
-<div id="unity-container" class="unity-desktop">
-    <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-    <div id="unity-loading-bar">
-    <div id="unity-logo"></div>
-    <div id="unity-progress-bar-empty">
-        <div id="unity-progress-bar-full"></div>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | TecTreasure</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+  </head>
+  <body>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
+      </div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">TecTreasure</div>
+      </div>
     </div>
-    </div>
-    <div id="unity-warning"> </div>
-    <div id="unity-footer">
-    <div id="unity-webgl-logo"></div>
-    <div id="unity-fullscreen-button"></div>
-    <div id="unity-build-title">TecTreasure</div>
-    </div>
-</div>
-
-<script>
+    <script>
 
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
@@ -119,4 +117,6 @@
 
       document.body.appendChild(script);
 
-</script>
+    </script>
+  </body>
+</html>
