--- a/WebAppTecTreasure/wwwroot/index.html
+++ b/WebAppTecTreasure/wwwroot/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/game3.loader.js";
+      var loaderUrl = buildUrl + "/game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/game3.data",
-        frameworkUrl: buildUrl + "/game3.framework.js",
-        codeUrl: buildUrl + "/game3.wasm",
+        dataUrl: buildUrl + "/game.data",
+        frameworkUrl: buildUrl + "/game.framework.js",
+        codeUrl: buildUrl + "/game.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TecTreasure",
